Working bracket but the code ugly

--- a/app/src/main/res/layout/bracket_match.xml
+++ b/app/src/main/res/layout/bracket_match.xml
@@ -64,7 +64,7 @@
                 android:text="1"
                 android:textColor="?redAllianceText"
                 android:textSize="24sp"
-                android:textStyle="normal|bold"/>
+                android:textStyle="normal"/>
         </LinearLayout>
 
 
@@ -85,7 +85,7 @@
                 android:text="8"
                 android:textColor="?blueAllianceText"
                 android:textSize="24sp"
-                android:textStyle="normal|bold"/>
+                android:textStyle="normal"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
