--- a/app/src/main/res/layout/fragment_fastscroll.xml
+++ b/app/src/main/res/layout/fragment_fastscroll.xml
@@ -14,6 +14,12 @@
 
         <com.aquamorph.frcmanager.utils.MyRecyclerView
             android:id="@+id/rv"
+            app:fastScrollEnabled="true"
+            app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
+            app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
+            app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
+            app:fastScrollVerticalTrackDrawable="@drawable/line_drawable"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
