--- a/app/src/main/res/layout/team_number_slide.xml
+++ b/app/src/main/res/layout/team_number_slide.xml
@@ -10,7 +10,6 @@
               android:paddingRight="16dp">
 
     <TextView
-        android:id="@+id/teamNumberPrompt"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="center"
@@ -32,14 +31,12 @@
         android:textColor="@color/icons"
         android:textSize="48sp"/>
 
-    <Space
-        android:id="@+id/blank1"
+    <TextView
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="4"/>
 
-    <Space
-        android:id="@+id/blank2"
+    <TextView
         android:layout_width="fill_parent"
         android:layout_height="64dp"/>
 
