--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -9,4 +9,5 @@
     <attr name="textOnBackground" format="reference|color"/>
     <attr name="bubbleText" format="reference|color"/>
     <attr name="cardBackground" format="reference|color"/>
+    <attr name="scroll_line" format="reference"/>
 </resources>
