--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="blue_primary">#2196F3</color>
     <color name="blue_primary_dark">#1976D2</color>
     <color name="black">#000000</color>
+    <color name="background_light">#FAFAFA</color>
+    <color name="background_dark">#424242</color>
 </resources>
