--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,8 +4,8 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
-        <item name="backgroundColor">#FAFAFA</item>
-        <item name="cardBackground">#FAFAFA</item>
+        <item name="backgroundColor">@color/background_light</item>
+        <item name="cardBackground">@color/background_light</item>
         <item name="redAllianceBackground">@color/red_alliance_light</item>
         <item name="blueAllianceBackground">@color/blue_alliance_light</item>
         <item name="redAllianceText">@color/primary_text</item>
@@ -13,13 +13,14 @@
         <item name="text">@color/primary_text</item>
         <item name="textOnBackground">@color/primary_text</item>
         <item name="bubbleText">@color/icons</item>
+        <item name="scroll_line">@drawable/line_light</item>
     </style>
 
     <style name="DarkTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
-        <item name="backgroundColor">#424242</item>
+        <item name="backgroundColor">@color/background_dark</item>
         <item name="cardBackground">#616161</item>
         <item name="redAllianceBackground">#806161</item>
         <item name="blueAllianceBackground">#616180</item>
@@ -32,6 +33,7 @@
         <item name="android:textColorSecondary">#BDBDBD</item>
         <item name="android:textColorTertiary">#BDBDBD</item>
         <item name="android:listDivider">@color/icons</item>
+        <item name="scroll_line">@drawable/line_dark</item>
     </style>
 
     <style name="OMOLEDTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -51,6 +53,7 @@
         <item name="android:textColorSecondary">#616180</item>
         <item name="android:textColorTertiary">#616180</item>
         <item name="android:listDivider">@color/icons</item>
+        <item name="scroll_line">@drawable/line_omoled</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
