--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="textOnBackground">@color/primary_text</item>
         <item name="bubbleText">@color/icons</item>
         <item name="scroll_line">@drawable/line_light</item>
+        <item name="dividerColor">@color/divider_light</item>
     </style>
 
     <style name="DarkTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -34,6 +35,7 @@
         <item name="android:textColorTertiary">#BDBDBD</item>
         <item name="android:listDivider">@color/icons</item>
         <item name="scroll_line">@drawable/line_dark</item>
+        <item name="dividerColor">@color/divider_dark</item>
     </style>
 
     <style name="OMOLEDTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -54,6 +56,7 @@
         <item name="android:textColorTertiary">#616180</item>
         <item name="android:listDivider">@color/icons</item>
         <item name="scroll_line">@drawable/line_omoled</item>
+        <item name="dividerColor">@color/divider_dark</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
