--- a/app/src/main/res/layout/match.xml
+++ b/app/src/main/res/layout/match.xml
@@ -57,6 +57,7 @@
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
                         android:text="@string/sample_team"
+                        android:gravity="center"
                         android:textColor="?redAllianceText"
                         android:textSize="@dimen/team_number_text"
                         android:typeface="monospace"/>
@@ -67,6 +68,7 @@
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
                         android:text="@string/sample_team"
+                        android:gravity="center"
                         android:textColor="?redAllianceText"
                         android:textSize="@dimen/team_number_text"
                         android:typeface="monospace"/>
@@ -77,6 +79,7 @@
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
                         android:text="@string/sample_team"
+                        android:gravity="center"
                         android:textColor="?redAllianceText"
                         android:textSize="@dimen/team_number_text"
                         android:typeface="monospace"/>
@@ -97,6 +100,7 @@
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
                         android:text="@string/sample_team"
+                        android:gravity="center"
                         android:textColor="?blueAllianceText"
                         android:textSize="@dimen/team_number_text"
                         android:typeface="monospace"/>
@@ -107,6 +111,7 @@
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
                         android:text="@string/sample_team"
+                        android:gravity="center"
                         android:textColor="?blueAllianceText"
                         android:textSize="@dimen/team_number_text"
                         android:typeface="monospace"/>
@@ -117,6 +122,7 @@
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
                         android:text="@string/sample_team"
+                        android:gravity="center"
                         android:textColor="?blueAllianceText"
                         android:textSize="@dimen/team_number_text"
                         android:typeface="monospace"/>
@@ -162,7 +168,8 @@
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
-                        android:gravity="center"
+                        android:gravity="right"
+                        android:paddingRight="8dp"
                         android:text="@string/sample_team"
                         android:textColor="?redAllianceText"
                         android:textSize="@dimen/team_number_text"/>
@@ -182,7 +189,8 @@
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
-                        android:gravity="center"
+                        android:gravity="right"
+                        android:paddingRight="8dp"
                         android:text="@string/sample_team"
                         android:textColor="?blueAllianceText"
                         android:textSize="@dimen/team_number_text"/>
