--- a/app/src/main/res/layout/team_number_slide.xml
+++ b/app/src/main/res/layout/team_number_slide.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="10"
-              android:background="@color/blue_primary"
+              android:background="@color/primary"
               android:orientation="vertical"
               android:paddingLeft="16dp"
               android:paddingRight="16dp">
