--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,7 +70,7 @@
     <style name="Setup" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
+        <item name="colorAccent">@color/primary_light</item>
         <item name="colorControlNormal">@color/icons</item>
         <item name="android:spinnerDropDownItemStyle">@style/setupSpinner</item>
     </style>
