Year selector is now hidden in official app release

--- a/app/src/main/res/layout/team_number_slide.xml
+++ b/app/src/main/res/layout/team_number_slide.xml
@@ -40,6 +40,7 @@
 
     <Spinner
         android:id="@+id/year_spinner"
+        android:visibility="gone"
         android:paddingTop="@dimen/expand_size"
         android:paddingBottom="@dimen/expand_size"
         android:layout_width="match_parent"
