--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="team_number_text">17sp</dimen>
     <dimen name="divider_padding">72dp</dimen>
+    <dimen name="match_score_text">20sp</dimen>
+    <dimen name="match_help_text">25sp</dimen>
 </resources>
