--- a/app/src/main/res/layout/match_text_h1.xml
+++ b/app/src/main/res/layout/match_text_h1.xml
@@ -8,12 +8,13 @@
         android:id="@+id/text"
         android:layout_weight="3"
         android:gravity="start|center_vertical"
-        android:textSize="@dimen/match_help_text"
+        android:textSize="@dimen/match_help_text_h1"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="?textOnBackground"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Description"
+        android:background="?cardBackground"
         android:paddingLeft="@dimen/activity_vertical_margin"/>
     <TextView
         android:layout_weight="1"
