--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,6 @@
     <dimen name="team_number_text">17sp</dimen>
     <dimen name="divider_padding">72dp</dimen>
     <dimen name="match_score_text">20sp</dimen>
-    <dimen name="match_help_text">25sp</dimen>
+    <dimen name="match_help_text_h1">25sp</dimen>
+    <dimen name="match_help_text_h2">23sp</dimen>
 </resources>
