Battery saver theme now has divider for cards Divider theme width constant Improved theme colors

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,8 +52,8 @@
         <item name="textOnBackground">@color/icons</item>
         <item name="bubbleText">@color/icons</item>
         <item name="android:textColorPrimary">@color/icons</item>
-        <item name="android:textColorSecondary">#616180</item>
-        <item name="android:textColorTertiary">#616180</item>
+        <item name="android:textColorSecondary">#8A8080</item>
+        <item name="android:textColorTertiary">#8A8080</item>
         <item name="android:listDivider">@color/icons</item>
         <item name="scroll_line">@drawable/line_omoled</item>
         <item name="dividerColor">@color/divider_dark</item>
